--- a/app/index.html
+++ b/app/index.html
@@ -39,6 +39,8 @@
   <script src="view1/view1.js"></script>
   <script src="view2/view2.js"></script>
   <script src="game/PelGameController.js"></script>
+  <script src="game/PelGameModels.js"></script>
+  <script src="game/PelGameView.js"></script>
   <script src="services/globalVarsService.js"></script>
   <script src="helpers/keymapHelper.js"></script>
   <script src="components/version/version.js"></script>
