impact correction, trailing and bugs

--- a/app/index.html
+++ b/app/index.html
@@ -43,6 +43,7 @@
   <script src="game/PelGameView.js"></script>
   <script src="services/globalVarsService.js"></script>
   <script src="helpers/keymapHelper.js"></script>
+  <script src="helpers/miscHelper.js"></script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
