--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,4 +1,4 @@
 <button ng-click="launchGame()">{{displayText.launch}}</button>
-<div id="canvasContainer">
-    <canvas id="pelCanvas" ></canvas>
+<div id="canvasContainer" >
+    <canvas id="pelCanvas" style="border: thin solid black"></canvas>
 </div>
