--- a/app/index.html
+++ b/app/index.html
@@ -41,6 +41,7 @@
   <script src="game/PelGameController.js"></script>
   <script src="game/PelGameModels.js"></script>
   <script src="game/PelGameView.js"></script>
+  <script src="game/factories/BallFactory.js"></script>
   <script src="services/globalVarsService.js"></script>
   <script src="helpers/keymapHelper.js"></script>
   <script src="helpers/miscHelper.js"></script>
