--- a/app/index.html
+++ b/app/index.html
@@ -42,6 +42,7 @@
   <script src="game/PelGameModels.js"></script>
   <script src="game/PelGameView.js"></script>
   <script src="game/factories/BallFactory.js"></script>
+  <script src="game/ScoreManager.js"></script>
   <script src="services/globalVarsService.js"></script>
   <script src="helpers/keymapHelper.js"></script>
   <script src="helpers/miscHelper.js"></script>
