--- a/app/index.html
+++ b/app/index.html
@@ -43,6 +43,7 @@
   <script src="game/PelGameView.js"></script>
   <script src="game/factories/BallFactory.js"></script>
   <script src="game/ScoreManager.js"></script>
+  <script src="game/ObjectLauncher.js"></script>
   <script src="services/globalVarsService.js"></script>
   <script src="helpers/keymapHelper.js"></script>
   <script src="helpers/miscHelper.js"></script>
