--- a/app/index.html
+++ b/app/index.html
@@ -46,6 +46,7 @@
   <script src="services/globalVarsService.js"></script>
   <script src="helpers/keymapHelper.js"></script>
   <script src="helpers/miscHelper.js"></script>
+  <script src="helpers/locationHelper.js"></script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
