--- a/app/index.html
+++ b/app/index.html
@@ -39,8 +39,10 @@
   <script src="game/models/Ball.js"></script>
   <script src="game/models/PaddleSpot.js"></script>
   <script src="game/models/Event.js"></script>
+  <script src="game/models/Bonus.js"></script>
   <script src="game/PelGameView.js"></script>
   <script src="game/factories/BallFactory.js"></script>
+  <script src="game/factories/BonusFactory.js"></script>
   <script src="game/ScoreManager.js"></script>
   <script src="game/ObjectLauncher.js"></script>
   <script src="services/globalVarsService.js"></script>
