--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,6 +1,7 @@
 <button ng-click="launchGame()">{{displayText.launch}}</button>
 <button ng-click="stopGame()">{{displayText.stop}}</button>
 <button ng-click="launchBall()">{{displayText.launchBall}}</button>
+<button ng-click="launchBonus()">{{displayText.launchBonus}}</button>
 <div id="canvasContainer" >
     <canvas id="pelCanvas" style="border: thin solid black"></canvas>
 </div>
